CRLGram/output/crl_gramParser.java
// $ANTLR 3.5.1 C:\\Users\\user\\Documents\\GitHub\\antlrtest\\CRLGram\\crl_gram.g 2017-10-10 13:34:31

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.debug.*;
import java.io.IOException;
import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class crl_gramParser extends DebugParser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "Action", "Actions", "Breackits", 
		"CRL", "Char_lit", "Condition", "Conditions", "Constraint", "DIGIT", "EOL", 
		"Ident_token", "Identifier", "J_Expression", "J_expr", "J_int_literal", 
		"Java_string_expr", "LETTER", "Other_literals", "Set_mark", "String_lit", 
		"WS", "'\"'", "','", "'.'", "':'", "'add label'", "'as'", "'category'", 
		"'cell'", "'end'", "'entry'", "'group'", "'label'", "'lock-on-active'", 
		"'merge'", "'new entry'", "'new label'", "'no categories'", "'no cells'", 
		"'no entries'", "'no labels'", "'of'", "'print'", "'printf'", "'rule #'", 
		"'set category'", "'set indent'", "'set mark'", "'set parent'", "'set text'", 
		"'set value'", "'split'", "'then'", "'to'", "'update'", "'when'", "'with'"
	};
	public static final int EOF=-1;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int T__55=55;
	public static final int T__56=56;
	public static final int T__57=57;
	public static final int T__58=58;
	public static final int T__59=59;
	public static final int T__60=60;
	public static final int Action=4;
	public static final int Actions=5;
	public static final int Breackits=6;
	public static final int CRL=7;
	public static final int Char_lit=8;
	public static final int Condition=9;
	public static final int Conditions=10;
	public static final int Constraint=11;
	public static final int DIGIT=12;
	public static final int EOL=13;
	public static final int Ident_token=14;
	public static final int Identifier=15;
	public static final int J_Expression=16;
	public static final int J_expr=17;
	public static final int J_int_literal=18;
	public static final int Java_string_expr=19;
	public static final int LETTER=20;
	public static final int Other_literals=21;
	public static final int Set_mark=22;
	public static final int String_lit=23;
	public static final int WS=24;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public static final String[] ruleNames = new String[] {
		"invalidRule", "j_expr", "action_", "set_category", "crl_rule", "crl", 
		"constraints", "set_value", "set_parent", "j_expr_", "c_print", "identifier", 
		"new_entry", "group", "query", "set_indent", "action", "split", "merge", 
		"update", "set_mark", "new_label", "add_label", "condition", "set_text"
	};

	public static final boolean[] decisionCanBacktrack = new boolean[] {
		false, // invalid decision
		false, false, false, false, false, false, false, false, false, false, 
		    false, false, false, false
	};

 
	public int ruleLevel = 0;
	public int getRuleLevel() { return ruleLevel; }
	public void incRuleLevel() { ruleLevel++; }
	public void decRuleLevel() { ruleLevel--; }
	public crl_gramParser(TokenStream input) {
		this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
	}
	public crl_gramParser(TokenStream input, int port, RecognizerSharedState state) {
		super(input, state);
		DebugEventSocketProxy proxy =
			new DebugEventSocketProxy(this,port,adaptor);
		setDebugListener(proxy);
		setTokenStream(new DebugTokenStream(input,proxy));
		try {
			proxy.handshake();
		}
		catch (IOException ioe) {
			reportError(ioe);
		}
		TreeAdaptor adap = new CommonTreeAdaptor();
		setTreeAdaptor(adap);
		proxy.setTreeAdaptor(adap);
	}

	public crl_gramParser(TokenStream input, DebugEventListener dbg) {
		super(input, dbg);
		 
		TreeAdaptor adap = new CommonTreeAdaptor();
		setTreeAdaptor(adap);

	}

	protected boolean evalPredicate(boolean result, String predicate) {
		dbg.semanticPredicate(result, predicate);
		return result;
	}

		protected DebugTreeAdaptor adaptor;
		public void setTreeAdaptor(TreeAdaptor adaptor) {
			this.adaptor = new DebugTreeAdaptor(dbg,adaptor);
		}
		public TreeAdaptor getTreeAdaptor() {
			return adaptor;
		}
	@Override public String[] getTokenNames() { return crl_gramParser.tokenNames; }
	@Override public String getGrammarFileName() { return "C:\\Users\\user\\Documents\\GitHub\\antlrtest\\CRLGram\\crl_gram.g"; }


	public static class crl_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "crl"
	// C:\\Users\\user\\Documents\\GitHub\\antlrtest\\CRLGram\\crl_gram.g:27:1: crl : ( crl_rule )+ -> ^( CRL ( crl_rule )+ ) ;
	public final crl_gramParser.crl_return crl() throws RecognitionException {
		crl_gramParser.crl_return retval = new crl_gramParser.crl_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		ParserRuleReturnScope crl_rule1 =null;

		RewriteRuleSubtreeStream stream_crl_rule=new RewriteRuleSubtreeStream(adaptor,"rule crl_rule");

		try { dbg.enterRule(getGrammarFileName(), "crl");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(27, 0);

		try {
			// C:\\Users\\user\\Documents\\GitHub\\antlrtest\\CRLGram\\crl_gram.g:28:2: ( ( crl_rule )+ -> ^( CRL ( crl_rule )+ ) )
			dbg.enterAlt(1);

			// C:\\Users\\user\\Documents\\GitHub\\antlrtest\\CRLGram\\crl_gram.g:28:4: ( crl_rule )+
			{
			dbg.location(28,4);
			// C:\\Users\\user\\Documents\\GitHub\\antlrtest\\CRLGram\\crl_gram.g:28:4: ( crl_rule )+
			int cnt1=0;
			try { dbg.enterSubRule(1);

			loop1:
			while (true) {
				int alt1=2;
				try { dbg.enterDecision(1, decisionCanBacktrack[1]);

				int LA1_0 = input.LA(1);
				if ( (LA1_0==48) ) {
					alt1=1;
				}

				} finally {dbg.exitDecision(1);}

				switch (alt1) {
				case 1 :
					dbg.enterAlt(1);

					// C:\\Users\\user\\Documents\\GitHub\\antlrtest\\CRLGram\\crl_gram.g:28:4: crl_rule
					{
					dbg.location(28,4);
					pushFollow(FOLLOW_crl_rule_in_crl93);
					crl_rule1=crl_rule();
					state._fsp--;

					stream_crl_rule.add(crl_rule1.getTree());
					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					EarlyExitException eee = new EarlyExitException(1, input);
					dbg.recognitionException(eee);

					throw eee;
				}
				cnt1++;
			}
			} finally {dbg.exitSubRule(1);}

			// AST REWRITE
			// elements: crl_rule
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 28:14: -> ^( CRL ( crl_rule )+ )
			{
				dbg.location(28,17);
				// C:\\Users\\user\\Documents\\GitHub\\antlrtest\\CRLGram\\crl_gram.g:28:17: ^( CRL ( crl_rule )+ )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				dbg.location(28,19);
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(CRL, "CRL"), root_1);
				dbg.location(28,23);
				if ( !(stream_crl_rule.hasNext()) ) {
					throw new RewriteEarlyExitException();
				}
				while ( stream_crl_rule.hasNext() ) {
					dbg.location(28,23);
					adaptor.addChild(root_1, stream_crl_rule.nextTree());
				}
				stream_crl_rule.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(29, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "crl");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "crl"


	public static class crl_rule_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "crl_rule"
	// C:\\Users\\user\\Documents\\GitHub\\antlrtest\\CRLGram\\crl_gram.g:30:1: crl_rule : 'rule #' J_int_literal ( 'lock-on-active' )? EOL 'when' EOL ( condition )+ 'then' EOL ( action )+ 'end' ( EOL )? -> ^( J_int_literal ^( Conditions ( condition )+ ) ^( Actions ( action )+ ) ) ;
	public final crl_gramParser.crl_rule_return crl_rule() throws RecognitionException {
		crl_gramParser.crl_rule_return retval = new crl_gramParser.crl_rule_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		CommonToken string_literal2=null;
		CommonToken J_int_literal3=null;
		CommonToken string_literal4=null;
		CommonToken EOL5=null;
		CommonToken string_literal6=null;
		CommonToken EOL7=null;
		CommonToken string_literal9=null;
		CommonToken EOL10=null;
		CommonToken string_literal12=null;
		CommonToken EOL13=null;
		ParserRuleReturnScope condition8 =null;
		ParserRuleReturnScope action11 =null;

		CommonTree string_literal2_tree=null;
		CommonTree J_int_literal3_tree=null;
		CommonTree string_literal4_tree=null;
		CommonTree EOL5_tree=null;
		CommonTree string_literal6_tree=null;
		CommonTree EOL7_tree=null;
		CommonTree string_literal9_tree=null;
		CommonTree EOL10_tree=null;
		CommonTree string_literal12_tree=null;
		CommonTree EOL13_tree=null;
		RewriteRuleTokenStream stream_J_int_literal=new RewriteRuleTokenStream(adaptor,"token J_int_literal");
		RewriteRuleTokenStream stream_33=new RewriteRuleTokenStream(adaptor,"token 33");
		RewriteRuleTokenStream stream_56=new RewriteRuleTokenStream(adaptor,"token 56");
		RewriteRuleTokenStream stream_EOL=new RewriteRuleTokenStream(adaptor,"token EOL");
		RewriteRuleTokenStream stream_37=new RewriteRuleTokenStream(adaptor,"token 37");
		RewriteRuleTokenStream stream_48=new RewriteRuleTokenStream(adaptor,"token 48");
		RewriteRuleTokenStream stream_59=new RewriteRuleTokenStream(adaptor,"token 59");
		RewriteRuleSubtreeStream stream_condition=new RewriteRuleSubtreeStream(adaptor,"rule condition");
		RewriteRuleSubtreeStream stream_action=new RewriteRuleSubtreeStream(adaptor,"rule action");

		try { dbg.enterRule(getGrammarFileName(), "crl_rule");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(30, 0);

		try {
			// C:\\Users\\user\\Documents\\GitHub\\antlrtest\\CRLGram\\crl_gram.g:31:2: ( 'rule #' J_int_literal ( 'lock-on-active' )? EOL 'when' EOL ( condition )+ 'then' EOL ( action )+ 'end' ( EOL )? -> ^( J_int_literal ^( Conditions ( condition )+ ) ^( Actions ( action )+ ) ) )
			dbg.enterAlt(1);

			// C:\\Users\\user\\Documents\\GitHub\\antlrtest\\CRLGram\\crl_gram.g:31:4: 'rule #' J_int_literal ( 'lock-on-active' )? EOL 'when' EOL ( condition )+ 'then' EOL ( action )+ 'end' ( EOL )?
			{
			dbg.location(31,4);
			string_literal2=(CommonToken)match(input,48,FOLLOW_48_in_crl_rule113);  
			stream_48.add(string_literal2);
			dbg.location(31,13);
			J_int_literal3=(CommonToken)match(input,J_int_literal,FOLLOW_J_int_literal_in_crl_rule115);  
			stream_J_int_literal.add(J_int_literal3);
			dbg.location(31,27);
			// C:\\Users\\user\\Documents\\GitHub\\antlrtest\\CRLGram\\crl_gram.g:31:27: ( 'lock-on-active' )?
			int alt2=2;
			try { dbg.enterSubRule(2);
			try { dbg.enterDecision(2, decisionCanBacktrack[2]);

			int LA2_0 = input.LA(1);
			if ( (LA2_0==37) ) {
				alt2=1;
			}
			} finally {dbg.exitDecision(2);}

			switch (alt2) {
				case 1 :
					dbg.enterAlt(1);

					// C:\\Users\\user\\Documents\\GitHub\\antlrtest\\CRLGram\\crl_gram.g:31:27: 'lock-on-active'
					{
					dbg.location(31,27);
					string_literal4=(CommonToken)match(input,37,FOLLOW_37_in_crl_rule117);  
					stream_37.add(string_literal4);

					}
					break;

			}
			} finally {dbg.exitSubRule(2);}
			dbg.location(31,45);
			EOL5=(CommonToken)match(input,EOL,FOLLOW_EOL_in_crl_rule120);  
			stream_EOL.add(EOL5);
			dbg.location(32,3);
			string_literal6=(CommonToken)match(input,59,FOLLOW_59_in_crl_rule124);  
			stream_59.add(string_literal6);
			dbg.location(32,10);
			EOL7=(CommonToken)match(input,EOL,FOLLOW_EOL_in_crl_rule126);  
			stream_EOL.add(EOL7);
			dbg.location(33,3);
			// C:\\Users\\user\\Documents\\GitHub\\antlrtest\\CRLGram\\crl_gram.g:33:3: ( condition )+
			int cnt3=0;
			try { dbg.enterSubRule(3);

			loop3:
			while (true) {
				int alt3=2;
				try { dbg.enterDecision(3, decisionCanBacktrack[3]);

				int LA3_0 = input.LA(1);
				if ( ((LA3_0 >= 31 && LA3_0 <= 32)||LA3_0==34||LA3_0==36||(LA3_0 >= 41 && LA3_0 <= 44)) ) {
					alt3=1;
				}

				} finally {dbg.exitDecision(3);}

				switch (alt3) {
				case 1 :
					dbg.enterAlt(1);

					// C:\\Users\\user\\Documents\\GitHub\\antlrtest\\CRLGram\\crl_gram.g:33:3: condition
					{
					dbg.location(33,3);
					pushFollow(FOLLOW_condition_in_crl_rule131);
					condition8=condition();
					state._fsp--;

					stream_condition.add(condition8.getTree());
					}
					break;

				default :
					if ( cnt3 >= 1 ) break loop3;
					EarlyExitException eee = new EarlyExitException(3, input);
					dbg.recognitionException(eee);

					throw eee;
				}
				cnt3++;
			}
			} finally {dbg.exitSubRule(3);}
			dbg.location(34,3);
			string_literal9=(CommonToken)match(input,56,FOLLOW_56_in_crl_rule136);  
			stream_56.add(string_literal9);
			dbg.location(34,10);
			EOL10=(CommonToken)match(input,EOL,FOLLOW_EOL_in_crl_rule138);  
			stream_EOL.add(EOL10);
			dbg.location(35,3);
			// C:\\Users\\user\\Documents\\GitHub\\antlrtest\\CRLGram\\crl_gram.g:35:3: ( action )+
			int cnt4=0;
			try { dbg.enterSubRule(4);

			loop4:
			while (true) {
				int alt4=2;
				try { dbg.enterDecision(4, decisionCanBacktrack[4]);

				int LA4_0 = input.LA(1);
				if ( (LA4_0==29||LA4_0==35||(LA4_0 >= 38 && LA4_0 <= 40)||(LA4_0 >= 46 && LA4_0 <= 47)||(LA4_0 >= 49 && LA4_0 <= 53)||LA4_0==55||LA4_0==58) ) {
					alt4=1;
				}

				} finally {dbg.exitDecision(4);}

				switch (alt4) {
				case 1 :
					dbg.enterAlt(1);

					// C:\\Users\\user\\Documents\\GitHub\\antlrtest\\CRLGram\\crl_gram.g:35:3: action
					{
					dbg.location(35,3);
					pushFollow(FOLLOW_action_in_crl_rule142);
					action11=action();
					state._fsp--;

					stream_action.add(action11.getTree());
					}
					break;

				default :
					if ( cnt4 >= 1 ) break loop4;
					EarlyExitException eee = new EarlyExitException(4, input);
					dbg.recognitionException(eee);

					throw eee;
				}
				cnt4++;
			}
			} finally {dbg.exitSubRule(4);}
			dbg.location(36,3);
			string_literal12=(CommonToken)match(input,33,FOLLOW_33_in_crl_rule147);  
			stream_33.add(string_literal12);
			dbg.location(36,9);
			// C:\\Users\\user\\Documents\\GitHub\\antlrtest\\CRLGram\\crl_gram.g:36:9: ( EOL )?
			int alt5=2;
			try { dbg.enterSubRule(5);
			try { dbg.enterDecision(5, decisionCanBacktrack[5]);

			int LA5_0 = input.LA(1);
			if ( (LA5_0==EOL) ) {
				alt5=1;
			}
			} finally {dbg.exitDecision(5);}

			switch (alt5) {
				case 1 :
					dbg.enterAlt(1);

					// C:\\Users\\user\\Documents\\GitHub\\antlrtest\\CRLGram\\crl_gram.g:36:9: EOL
					{
					dbg.location(36,9);
					EOL13=(CommonToken)match(input,EOL,FOLLOW_EOL_in_crl_rule149);  
					stream_EOL.add(EOL13);

					}
					break;

			}
			} finally {dbg.exitSubRule(5);}

			// AST REWRITE
			// elements: action, J_int_literal, condition
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 36:14: -> ^( J_int_literal ^( Conditions ( condition )+ ) ^( Actions ( action )+ ) )
			{
				dbg.location(36,17);
				// C:\\Users\\user\\Documents\\GitHub\\antlrtest\\CRLGram\\crl_gram.g:36:17: ^( J_int_literal ^( Conditions ( condition )+ ) ^( Actions ( action )+ ) )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				dbg.location(36,19);
				root_1 = (CommonTree)adaptor.becomeRoot(stream_J_int_literal.nextNode(), root_1);
				dbg.location(36,33);
				// C:\\Users\\user\\Documents\\GitHub\\antlrtest\\CRLGram\\crl_gram.g:36:33: ^( Conditions ( condition )+ )
				{
				CommonTree root_2 = (CommonTree)adaptor.nil();
				dbg.location(36,35);
				root_2 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(Conditions, "Conditions"), root_2);
				dbg.location(36,46);
				if ( !(stream_condition.hasNext()) ) {
					throw new RewriteEarlyExitException();
				}
				while ( stream_condition.hasNext() ) {
					dbg.location(36,46);
					adaptor.addChild(root_2, stream_condition.nextTree());
				}
				stream_condition.reset();

				adaptor.addChild(root_1, root_2);
				}
				dbg.location(36,58);
				// C:\\Users\\user\\Documents\\GitHub\\antlrtest\\CRLGram\\crl_gram.g:36:58: ^( Actions ( action )+ )
				{
				CommonTree root_2 = (CommonTree)adaptor.nil();
				dbg.location(36,60);
				root_2 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(Actions, "Actions"), root_2);
				dbg.location(36,68);
				if ( !(stream_action.hasNext()) ) {
					throw new RewriteEarlyExitException();
				}
				while ( stream_action.hasNext() ) {
					dbg.location(36,68);
					adaptor.addChild(root_2, stream_action.nextTree());
				}
				stream_action.reset();

				adaptor.addChild(root_1, root_2);
				}

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(37, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "crl_rule");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "crl_rule"


	public static class condition_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "condition"
	// C:\\Users\\user\\Documents\\GitHub\\antlrtest\\CRLGram\\crl_gram.g:38:1: condition : query identifier ( constraints )? ( EOL )? -> ^( Condition query identifier ( constraints )? ) ;
	public final crl_gramParser.condition_return condition() throws RecognitionException {
		crl_gramParser.condition_return retval = new crl_gramParser.condition_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		CommonToken EOL17=null;
		ParserRuleReturnScope query14 =null;
		ParserRuleReturnScope identifier15 =null;
		ParserRuleReturnScope constraints16 =null;

		CommonTree EOL17_tree=null;
		RewriteRuleTokenStream stream_EOL=new RewriteRuleTokenStream(adaptor,"token EOL");
		RewriteRuleSubtreeStream stream_identifier=new RewriteRuleSubtreeStream(adaptor,"rule identifier");
		RewriteRuleSubtreeStream stream_query=new RewriteRuleSubtreeStream(adaptor,"rule query");
		RewriteRuleSubtreeStream stream_constraints=new RewriteRuleSubtreeStream(adaptor,"rule constraints");

		try { dbg.enterRule(getGrammarFileName(), "condition");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(38, 0);

		try {
			// C:\\Users\\user\\Documents\\GitHub\\antlrtest\\CRLGram\\crl_gram.g:39:2: ( query identifier ( constraints )? ( EOL )? -> ^( Condition query identifier ( constraints )? ) )
			dbg.enterAlt(1);

			// C:\\Users\\user\\Documents\\GitHub\\antlrtest\\CRLGram\\crl_gram.g:39:4: query identifier ( constraints )? ( EOL )?
			{
			dbg.location(39,4);
			pushFollow(FOLLOW_query_in_condition180);
			query14=query();
			state._fsp--;

			stream_query.add(query14.getTree());dbg.location(39,10);
			pushFollow(FOLLOW_identifier_in_condition182);
			identifier15=identifier();
			state._fsp--;

			stream_identifier.add(identifier15.getTree());dbg.location(39,21);
			// C:\\Users\\user\\Documents\\GitHub\\antlrtest\\CRLGram\\crl_gram.g:39:21: ( constraints )?
			int alt6=2;
			try { dbg.enterSubRule(6);
			try { dbg.enterDecision(6, decisionCanBacktrack[6]);

			int LA6_0 = input.LA(1);
			if ( (LA6_0==28) ) {
				alt6=1;
			}
			} finally {dbg.exitDecision(6);}

			switch (alt6) {
				case 1 :
					dbg.enterAlt(1);

					// C:\\Users\\user\\Documents\\GitHub\\antlrtest\\CRLGram\\crl_gram.g:39:21: constraints
					{
					dbg.location(39,21);
					pushFollow(FOLLOW_constraints_in_condition184);
					constraints16=constraints();
					state._fsp--;

					stream_constraints.add(constraints16.getTree());
					}
					break;

			}
			} finally {dbg.exitSubRule(6);}
			dbg.location(39,34);
			// C:\\Users\\user\\Documents\\GitHub\\antlrtest\\CRLGram\\crl_gram.g:39:34: ( EOL )?
			int alt7=2;
			try { dbg.enterSubRule(7);
			try { dbg.enterDecision(7, decisionCanBacktrack[7]);

			int LA7_0 = input.LA(1);
			if ( (LA7_0==EOL) ) {
				alt7=1;
			}
			} finally {dbg.exitDecision(7);}

			switch (alt7) {
				case 1 :
					dbg.enterAlt(1);

					// C:\\Users\\user\\Documents\\GitHub\\antlrtest\\CRLGram\\crl_gram.g:39:34: EOL
					{
					dbg.location(39,34);
					EOL17=(CommonToken)match(input,EOL,FOLLOW_EOL_in_condition187);  
					stream_EOL.add(EOL17);

					}
					break;

			}
			} finally {dbg.exitSubRule(7);}

			// AST REWRITE
			// elements: identifier, query, constraints
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 39:39: -> ^( Condition query identifier ( constraints )? )
			{
				dbg.location(39,42);
				// C:\\Users\\user\\Documents\\GitHub\\antlrtest\\CRLGram\\crl_gram.g:39:42: ^( Condition query identifier ( constraints )? )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				dbg.location(39,44);
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(Condition, "Condition"), root_1);
				dbg.location(39,54);
				adaptor.addChild(root_1, stream_query.nextTree());dbg.location(39,60);
				adaptor.addChild(root_1, stream_identifier.nextTree());dbg.location(39,71);
				// C:\\Users\\user\\Documents\\GitHub\\antlrtest\\CRLGram\\crl_gram.g:39:71: ( constraints )?
				if ( stream_constraints.hasNext() ) {
					dbg.location(39,71);
					adaptor.addChild(root_1, stream_constraints.nextTree());
				}
				stream_constraints.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(40, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "condition");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "condition"


	public static class query_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "query"
	// C:\\Users\\user\\Documents\\GitHub\\antlrtest\\CRLGram\\crl_gram.g:41:1: query : ( 'cell' | 'entry' | 'label' | 'category' | 'no cells' | 'no labels' | 'no entries' | 'no categories' );
	public final crl_gramParser.query_return query() throws RecognitionException {
		crl_gramParser.query_return retval = new crl_gramParser.query_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		CommonToken set18=null;

		CommonTree set18_tree=null;

		try { dbg.enterRule(getGrammarFileName(), "query");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(41, 0);

		try {
			// C:\\Users\\user\\Documents\\GitHub\\antlrtest\\CRLGram\\crl_gram.g:42:2: ( 'cell' | 'entry' | 'label' | 'category' | 'no cells' | 'no labels' | 'no entries' | 'no categories' )
			dbg.enterAlt(1);

			// C:\\Users\\user\\Documents\\GitHub\\antlrtest\\CRLGram\\crl_gram.g:
			{
			root_0 = (CommonTree)adaptor.nil();


			dbg.location(42,2);
			set18=(CommonToken)input.LT(1);
			if ( (input.LA(1) >= 31 && input.LA(1) <= 32)||input.LA(1)==34||input.LA(1)==36||(input.LA(1) >= 41 && input.LA(1) <= 44) ) {
				input.consume();
				adaptor.addChild(root_0, (CommonTree)adaptor.create(set18));
				state.errorRecovery=false;
			}
			else {
				MismatchedSetException mse = new MismatchedSetException(null,input);
				dbg.recognitionException(mse);
				throw mse;
			}
			}

			retval.stop = input.LT(-1);

